# programming_formalisms_project_summer_2025

./: .wordlist.txt  README.md  main.py  merging_branches.txt  pyproject.toml
.github/workflows/: check_code_style.yaml  check_links.yaml  check_package.yaml  check_spelling.yaml  measure_code_coverage.yml
docs/: requirements.md
learners/: Andrei_Ida_Dennis_Artjom-Exercise1.md  README-EXT.md  README.md  Risks_and_requirements.md  TDD_Artur_Milena_Viktor.py  group_andrej_and_artjoms.txt  group_nelly_and_viktor.txt  group_room_1.txt  viktor_andrei_file2.txt
learners/Dennis/: Codereview
learners/Milena/: code_review_test.txt  fitness_runtime_test.py
learners/andrej/: features.md  is_even.py  is_odd.py  my_assert.py
learners/artjoms/: artjoms_pair_programming.md  feature_r4d1.md  is_even.py  my_assert.py
learners/artur/: Features_Req_R2.md  divide_by.py  merging_branches.txt  read_file.py  requirements.txt
learners/claremar/: README.md  REAME.md
learners/dennis/: Feature-list.md  branching-exercise  branching-exercise-milena.txt  group_ida_and_dennis_and_xiuqi.txt  (+1 more)
learners/ida/: README.md  (+3 more)
scripts/: fix_markdown_style_errors.sh
tests/: __init__.py  test_andrei_utils.py  test_andrej_artur_class.py  test_ao.py  test_artjoms_maria_position_utils.py  test_artur_utils.py  test_dennis_utils.py  test_experiment.py  test_get_digits.py  test_ida_utils.py  test_isnumber.py  test_maria_ole_get-digits.py  test_maria_ole_getdigits_utils.py  test_maria_utils.py  test_milena.py  test_ole.py  test_parameters_milena.py  test_reader.py  test_utils.py  test_xiuqi_utils.py
(+72 files in other folders)
